--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,3 +3,7 @@
 
 // Bootstrap
 @import '~admin-lte/build/scss/adminlte';
+
+@import "https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css";
+@import "https://cdn.datatables.net/1.13.7/css/dataTables.jqueryui.min.css";
+@import "https://cdn.datatables.net/scroller/2.3.0/css/scroller.jqueryui.min.css";
