--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,3 +7,4 @@
 @import "https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css";
 @import "https://cdn.datatables.net/1.13.7/css/dataTables.jqueryui.min.css";
 @import "https://cdn.datatables.net/scroller/2.3.0/css/scroller.jqueryui.min.css";
+@import "https://unpkg.com/vue3-easy-data-table/dist/style.css";
